[package]
name = "contract"
version = "0.1.0"
authors = ["Muzahir Hussain"]
edition = "2018"

[dependencies]
hex = "0.4"
contract = { package = "casper-contract", version="1.1.1" }
types = { package = "casper-types", version="1.1.1" }

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
